<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LheidoSMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ContactPicture" translatable="false">image contact</string>
    <string name="send_message">Send</string>
    <string name="enter_sms">Enter a message</string>
    <string name="empty_sms" translatable="false" />
    <string name="empty_message">Empty message</string>
    <string name="action_call_title">Call</string>
    <string name="action_new_sms">New conversation</string>
    <string name="drawer_start_opened">List opened at startup</string>
    <string name="keyboard_start_visible">Keyboard</string>
    <string name="first_upper_letter">First letter</string>
    <string name="first_upper_letter_summ">Upper case</string>
    <string name="first_upper_letter_summ_on">Upper case</string>
    <string name="first_upper_letter_summ_off">Lower case</string>
    <string name="show_contact_picture">Display contact picturs</string>
    <string name="show_nb_sms">Display number of message</string>
    <string name="list_conversation_jazzyeffect_title">Scroll animation</string>
    <string name="list_conversation_jazzyeffect_default" translatable="false">14</string>
    <string name="delete_hold_sms">Delete old message</string>
    <string name="limit_hold_sms" translatable="false">500</string>
    <string name="pref_sms_onload">Number of sms at load</string>
    <string name="pref_text_size_dialog">Text size</string>
    <string name="conversation_jazzylistview_effect">Animation</string>
    <string name="hold_message">Old messages</string>
    <string name="receiver_notification">Notification</string>
    <string name="receiver_notification_off">Notifications disabled</string>
    <string name="receiver_notification_on">Notifications enabled</string>
    <string name="pref_vibrate">Vibration</string>
    <string name="receiver_vibrate">Vibration</string>
    <string name="receiver_vibrate_on">Vibration enabled</string>
    <string name="receiver_vibrate_off">Vibration disabled</string>
    <string name="receiver_vibrate_delivered">Vibration delivered message</string>
    <string name="receiver_ringtone">Ringtone</string>
    <string name="receiver_ringtone_off">Disabled</string>
    <string name="receiver_ringtone_on">Enabled</string>
    <string name="pref_app_name">LheidoSMS Settings</string>
    <string name="keyboard_close_send">Keyboard</string>
    <string name="keyboard_close_send_off">The keyboard does not disappear after sending a message</string>
    <string name="keyboard_close_send_on">The keyboard disappears after sending a message</string>
    <string name="drawer_start_opened_key" translatable="false">drawer_start_opened</string>
    <color name="bg_conversationList" >#EE191919</color>
    <color name="bg_conversationList_new_message" >#9601a308</color>
    <string name="pref_conversation">Conversations</string>
    <string name="pref_conversation_onload">Number of conversations</string>
    <string name="pref_conversation_sum">On loading conversations list</string>
    <string name="app_service_name" translatable="false">LheidoSMS Service</string>
    <string name="mms_desc" translatable="false">image</string>
    <string name="action_voir_contact">See  contact</string>
    <string name="action_delete_old">Delete old sms</string>
    <string name="delete_old_nb">Number of SMS</string>
    <string name="delete_service_name" translatable="false">LheidoSMS DeleteOldSms Service</string>
    <string name="description_zoom_mms" translatable="false">mms zoom</string>
    <string name="old_message_false">The delete old messages option is disabled</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">Ok</string>
    <string name="new_conversation_phone">Phone number or contact name</string>
    <string name="error_invalide_phone">Error: invalid phone number</string>
    <string name="error_contact_name">Error: unknow contact name</string>
    <string name="message_copy">Message copied</string>
    <string name="action_remove_conversation">Remove conversation</string>
    <string name="remove_conversation_service" translatable="false">Remove conversation service</string>
    <string name="double_back_toast">Press again to exit</string>
    <string name="alert_dialog_remove_conversation_title">Removal</string>
    <string name="alert_dialog_remove_conversation_msg">Do you really want to delete this conversation?</string>
    <string name="alert_dialog_remove_conversation_yes">Yes</string>
    <string name="alert_dialog_remove_conversation_no">No</string>

    <string name="date_format_today">%H:%M</string>
    <string name="date_format_current_month">%d/%m/%Y %H:%M</string>
    <string name="date_format">%d/%m/%Y</string>

</resources>
