<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="drawer_start_opened"
        android:title="@string/drawer_start_opened"
        android:defaultValue="false" />

    <ListPreference
        android:defaultValue="10"
        android:dialogTitle="@string/pref_conversation_onload"
        android:entries="@array/conversation_onload"
        android:entryValues="@array/conversation_onload"
        android:key="conversation_onload"
        android:title="@string/pref_conversation_onload"
        android:summary="@string/pref_conversation_sum" />

    <CheckBoxPreference
        android:key="show_contact_picture"
        android:title="@string/show_contact_picture"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="show_nb_sms"
        android:title="@string/show_nb_sms"
        android:defaultValue="true" />

    <ListPreference
        android:key="list_conversations_jazzyeffect"
        android:title="@string/list_conversation_jazzyeffect_title"
        android:dialogTitle="@string/list_conversation_jazzyeffect_title"
        android:entries="@array/jazzyeffect"
        android:entryValues="@array/jazzyeffect_values"
        android:defaultValue="@string/list_conversation_jazzyeffect_default" />


</PreferenceScreen>