<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_call"
        android:orderInCategory="50"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_device_access_call"
        android:title="@string/action_call_title"
        />
    <item
        android:id="@+id/sub"
        android:orderInCategory="150"
        app:showAsAction="ifRoom"
        android:icon="@drawable/abc_ic_menu_moreoverflow_normal_holo_dark"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/action_new_sms"
                android:icon="@drawable/ic_action_content_new"
                android:orderInCategory="50"
                app:showAsAction="ifRoom"
                android:title="@string/action_new_sms"/>
            <item
                android:id="@+id/action_voir_contact"
                android:orderInCategory="50"
                app:showAsAction="ifRoom"
                android:title="@string/action_voir_contact"/>

            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_action_action_settings"
                android:orderInCategory="100"
                app:showAsAction="ifRoom"
                android:title="@string/action_settings"/>

        </menu>
    </item>

</menu>
