<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new_sms"
        android:icon="@drawable/ic_action_content_new"
        android:orderInCategory="50"
        app:showAsAction="ifRoom"
        android:title="@string/action_new_sms"/>
    <item
        android:id="@+id/sub"
        android:orderInCategory="150"
        app:showAsAction="ifRoom"
        android:icon="@drawable/abc_ic_menu_moreoverflow_normal_holo_dark"
        android:title="@string/action_settings">
        <menu>

            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_action_action_settings"
                android:orderInCategory="100"
                app:showAsAction="ifRoom"
                android:title="@string/action_settings"/>
            <item
                android:id="@+id/action_delete_old"
                android:orderInCategory="100"
                app:showAsAction="ifRoom"
                android:title="@string/action_delete_old"/>

        </menu>
    </item>
</menu>

